--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -24,7 +24,7 @@
 
 <br>
 
-<a href = "https"> Search course</a>
+<a href = "https"> Search songs</a>
 <br>
 <input type = "search" placeholder="search">
 
