--- a/public/stylesheet/stylesheet.css
+++ b/public/stylesheet/stylesheet.css
@@ -5,7 +5,7 @@ body {
     text-align: center;
 
     background: black
-            url("/IMG-20250715-WA0012.jpg") no-repeat fixed 
+            url("/IMG-20250715-WA0012.jpg") no-repeat auto
             center;
 
     
@@ -23,6 +23,10 @@ div {
     border-radius: 30px;
     margin: 30px;
     background-color: rgb(8, 33, 48);
+}
+
+a {
+    color:turquoise;
 }
 
 .submit-button {
@@ -46,7 +50,7 @@ input {
 
 #yoloConnect-mission {
 
-    color: rgb(50, 205, 109);
+    color: rgb(34, 255, 233);
 }
 
 nav {
