--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -28,9 +28,6 @@
 <br>
 <input type = "search" placeholder="search">
 
-
- </h1>  
-
  <br>
 
  <nav>
@@ -38,6 +35,27 @@
         <a href = "/"> Home </a>
     </li>
  </nav>
+
+ <div>
+
+    <a href="/Don-Moen-Ft-Frank-Edwards-Hallelujah-(TrendyBeatz.com).mp3" download>Frank Edward- Halleluyah MP3 Download</a>
+  <br>
+  <a href = "/Frank Edward - You alone_hitbank.com.mp3" download> Frank Edward- You alone MP3 Download</a>
+  <br>
+  <a href = "Frank-Edwards-Oghene-Doh-(hitbank.com).mp3" download> Frank Edward- Oghene Do MP3 Download </a>
+  <br>
+  <a href = "/Frank Edward- Melody_hitbank.com.mp3" download>Frank Edward- Melody MP3 Download </a>
+<br> 
+<a href = "/Frank-Edwards-Love-(TrendyBeatz.com).mp3" download> Frank Edward- Love MP3 Download </a>
+
+<br>
+</div>
+<br>
+<iframe src = "/VID-20250719-WA0008.mp4" auto-play = false allowfullscreen title="Precious and Co Dancing"  autoplay = "0" frameborder = "0" allow = "encrypted-media" download>
+
+<br>
+
+
 
  <script src = "change-color.js">
  </script>
