--- a/public/stylesheet/stylesheet.css
+++ b/public/stylesheet/stylesheet.css
@@ -1,10 +1,10 @@
 body {
 
     background-color: black;
-    color: white;
+    color: rgb(90, 219, 219);
     text-align: center;
 
-    background: white; url:("/hitbank.jpeg") no-repeat auto center;
+    background-image: url("/hitbank.jpeg") no-repeat auto center;
 
     
     
@@ -31,7 +31,7 @@ a {
 .submit-button {
 
     background-color: rgba(138, 255, 153, 0.432);
-    width: 10%;
+    width: 20%;
     border-radius: 30px;
     color: turquoise;
     margin: 20px;
