--- a/public/stylesheet/stylesheet.css
+++ b/public/stylesheet/stylesheet.css
@@ -1,10 +1,10 @@
 body {
 
     background-color: black;
-    color: rgb(90, 219, 219);
+    color: darkslategrey;
     text-align: center;
 
-    background-image: url("/hitbank.jpeg") no-repeat auto center;
+    background-image: url("hitbank.jpeg") no-repeat auto center;
 
     
     
@@ -12,7 +12,7 @@ body {
 
 h1 {
 
-    color: white;
+    color: rgb(39, 116, 108);
 }
 
 div {
@@ -30,8 +30,8 @@ a {
 
 .submit-button {
 
-    background-color: rgba(138, 255, 153, 0.432);
-    width: 20%;
+    background-color: rgba(39, 110, 49, 0.432);
+    width: 30%;
     border-radius: 30px;
     color: turquoise;
     margin: 20px;
