--- a/public/stylesheet/stylesheet.css
+++ b/public/stylesheet/stylesheet.css
@@ -16,11 +16,12 @@ h1 {
 }
 
 div {
-    width: auto;
+    width: 100%;
     border: solid 5px gray;
     border-radius: 20px;
     margin: 30px;
     background-color: rgb(0, 6, 8);
+
 }
 
 a {
